<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/infoview_map"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/infoview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Title"
        android:textSize="@dimen/infoview_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infoview_stationclosed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/infoview_stationclosed"
        android:textSize="@dimen/infoview_title"
        android:textColor="#FFFF0000"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/infoview_row_bikeimg"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >

        <ImageView
            android:id="@+id/infoview_bikeimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/refresh"
            android:src="@drawable/ic_menu_upload" />

        <ImageView
            android:id="@+id/infoview_bikestandimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/refresh"
            android:src="@drawable/stat_sys_download_anim5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoview_row_bike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/infoview_bikes"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="0"
            android:textSize="@dimen/infoview_nbbikes"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/infoview_stands"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="0"
            android:textSize="@dimen/infoview_nbbikes"
            android:layout_width="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoview_row_bonus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/infoview_bonusimg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/refresh"
            android:src="@drawable/ic_input_add" />

        <TextView
            android:id="@+id/infoview_bonus"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="left"
            android:text="@string/infoview_bonus"
            android:layout_width="0dp"
            android:layout_weight="8" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoview_row_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" >

        <ImageView
            android:id="@+id/infoview_bankimg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/refresh"
            android:src="@drawable/ic_coins_l" />

        <TextView
            android:id="@+id/infoview_bank"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="left"
            android:text="@string/infoview_bank"
            android:layout_width="0dp"
            android:layout_weight="8" />
    </LinearLayout>

</LinearLayout>